# qt-multiclient-logger

./: CMakeLists.txt  CMakeLists.txt.qEXREZ  LICENSE  README.md  controller.cpp  controller.h  dataprocessor.cpp  dataprocessor.h  eventmessage.h  eventreceiver.cpp  eventreceiver.h  gitignore  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message_trigger.py  opengl3dplot.cpp  opengl3dplot.h  pythonprocessmanager.cpp  pythonprocessmanager.h  settings.cpp  settings.h  settings.ui  writer.cpp  writer.h
